# milky-console

./: README.MD  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: test.yml
buildSrc/src/main/kotlin/top/kagg886/milky/gradle/: NativeCmakePlugin.kt
core/: .gitignore  build.gradle.kts
core-utils/: build.gradle.kts
core-utils/src/commonMain/kotlin/top/kagg886/milky/console/coreutils/: CoreUtilsKspAnchor.kt
core/src/commonMain/kotlin/: main.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/: Application.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/commands/: ExitCommand.kt  interface.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/plugin/: IPlugin.kt  Plugin.kt  PluginCloseReason.kt  PluginException.kt  PluginManifest.kt  PluginProcess.kt  PluginRegistry.kt  ext.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/plugin/config/: config.kt  host-config.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/plugin/exception/: PluginCloseReason.kt  PluginException.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/plugin/impl/: IPluginImpl.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/plugin/lifecycle/: close.kt  event.kt  handshake.kt  pipe-job.kt  ready.kt  verify.kt  wait-close.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/terminal/: CommandSystem.kt  Terminal.kt  command.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/terminal/commands/: ExitCommand.kt  interface.kt
core/src/commonMain/kotlin/top/kagg886/milky/console/util/: race.kt
core/src/commonTest/kotlin/: HostConfigTest.kt  PluginCloseReasonTest.kt  PluginLoaderTest.kt
core/src/commonTest/kotlin/top/kagg886/milky/console/plugin/: PluginRegistryTest.kt
core/src/commonTest/kotlin/top/kagg886/milky/console/terminal/: CommandTest.kt
core/src/commonTest/native/: CMakeLists.txt  plugin-loader-fixture.cmake  plugin_accept.c  plugin_reject.c
core/src/commonTest/native/plugin-loader-abi-mismatch/: CMakeLists.txt  manifest.json  plugin_loader_abi_mismatch.c
core/src/commonTest/native/plugin-loader-config-rejected/: CMakeLists.txt  manifest.json  plugin_loader_config_rejected.c
core/src/commonTest/native/plugin-loader-crash/: CMakeLists.txt  manifest.json  plugin_loader_crash.c
core/src/commonTest/native/plugin-loader-missing-entry/: CMakeLists.txt  manifest.json  plugin_loader_missing_entry.c
core/src/commonTest/native/plugin-loader-missing-on-load/: CMakeLists.txt  manifest.json  plugin_loader_missing_on_load.c
core/src/commonTest/native/plugin-loader-null-api/: CMakeLists.txt  manifest.json  plugin_loader_null_api.c
core/src/commonTest/native/plugin-loader-on-load-crash/: CMakeLists.txt  manifest.json  plugin_loader_on_load_crash.c
core/src/commonTest/native/plugin-loader-on-load-failed/: CMakeLists.txt  manifest.json  plugin_loader_on_load_failed.c
core/src/commonTest/native/plugin-loader-onload-request/: CMakeLists.txt  manifest.json  plugin_loader_onload_request.c
core/src/commonTest/native/plugin-loader-onmessage-request/: CMakeLists.txt  manifest.json  plugin_loader_onmessage_request.c
core/src/commonTest/native/plugin-loader-short-api/: CMakeLists.txt  manifest.json  plugin_loader_short_api.c
core/src/commonTest/native/plugin-loader-test/: CMakeLists.txt  manifest.json  plugin_loader_test.c
core/src/mingwMain/kotlin/top/kagg886/milky/console/plugin/: PluginProcess.mingw.kt
core/src/mingwTest/kotlin/: PluginLoaderTestContainer.mingw.kt
core/src/mingwTest/kotlin/top/kagg886/milky/console/plugin/: NativePluginTestEnvironment.mingw.kt
core/src/unixMain/kotlin/top/kagg886/milky/console/plugin/: PluginProcess.unix.kt
core/src/unixTest/kotlin/: PluginLoaderTestContainer.unix.kt
docs/: packet.md  plugin-lifecycle.md  plugin.md
gradle/: libs.versions.toml
plugin/api/: build.gradle.kts
plugin/api/include/: milky_console.h
plugin/api/src/nativeInterop/cinterop/: milky_console.def
plugin/loader/: build.gradle.kts
plugin/loader/src/commonMain/kotlin/: Application.kt  bridge.kt  handshake.kt  ipc.kt  lifecycle.kt  main.kt  packets.kt  pending.kt  utils.kt
plugin/loader/src/commonMain/kotlin/top/kagg886/milky/console/loader/: LoaderApplication.kt
plugin/processor/src/main/kotlin/top/kagg886/milky/console/processor/: PluginApiRequestProcessor.kt
plugin/protocol/: build.gradle.kts
plugin/protocol/src/commonMain/kotlin/top/kagg886/milky/console/protocol/: close.kt  common.kt  event.kt  handshake.kt  interface.kt  logger.kt
plugin/protocol/src/commonMain/kotlin/top/kagg886/milky/console/util/: cbor.kt  json.kt
plugin/protocol/src/commonMain/kotlin/top/kagg886/milky/console/util/protocol/: ext.kt  packet.kt
plugin/protocol/src/commonTest/kotlin/top/kagg886/milky/console/protocol/util/: PacketUtilTest.kt
plugin/sample/: README.md  build.gradle.kts  manifest.json
plugin/sample/src/nativeMain/kotlin/top/kagg886/milky/console/sample/: SamplePlugin.kt
processor/core/src/main/kotlin/top/kagg886/milky/console/processor/core/: PluginApiCallProcessor.kt
processor/protocol/src/main/kotlin/top/kagg886/milky/console/processor/protocol/: PluginApiRequestProcessor.kt
utils/dlloader/: build.gradle.kts
utils/dlloader/src/commonMain/kotlin/top/kagg886/saltify/console/util/dlloader/: dlloader.kt
utils/dlloader/src/commonTest/kotlin/top/kagg886/saltify/console/util/dlloader/: DLLoaderTest.kt
utils/dlloader/src/commonTest/native/: CMakeLists.txt  dlloader_test.c
utils/dlloader/src/mingwMain/kotlin/top/kagg886/saltify/console/util/dlloader/: dlloader.mingw.kt
utils/event-bus/: build.gradle.kts
utils/file-watcher/: build.gradle.kts
utils/file-watcher/src/commonTest/kotlin/: FileWatcherTest.kt
utils/file-watcher/src/nativeInterop/cinterop/: file_watcher_win.def  file_watcher_win.h
utils/logger/: build.gradle.kts
utils/pipe/: build.gradle.kts
utils/process/: build.gradle.kts
utils/process/src/commonTest/native/: CMakeLists.txt  process_test.c
utils/process/src/nativeInterop/cinterop/: posix_spawn.def  posix_spawn.h
(+34 files in other folders)
